bat.bool1.nearhundred.NearHundred.scala.error
Compilation error:
NearHundred:2: error: not found: value ||
  if(90 <= n) || (190 < n){
              ^